made server run
